<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="vote">Vote</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="follow_election_notice_message">Please notice that clicking any of the buttons in the election information section will redirect you to your default browser.</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="voting_locations">voting locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="representatives_search">REPRESENTATIVES SEARCH</string>
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">MY REPRESENTATIVES</string>
    <string name="connection_error">The app has not been able to access this information. Please check your connection.</string>

    <!--    Accessibility   -->
    <string name="accessibility_representative_picture">Representative picture</string>
    <string name="accessibility_website_link">Website Link</string>
    <string name="accessibility_facebook_link">Facebook link</string>
    <string name="accessibility_twitter_link">Twitter link</string>
    <string name="election_info">Election Information</string>
    <string name="representatives_list_loading_info">A list of your representatives will be shown here.</string>

</resources>
