<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_representativePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:contentDescription="@string/accessibility_representative_picture"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_representativeRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toEndOf="@+id/iv_representativePicture"
        app:layout_constraintTop_toTopOf="@id/iv_representativePicture"
        tools:text="President of the United States" />

    <TextView
        android:id="@+id/tv_representativeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/text_standard"
        app:layout_constraintStart_toStartOf="@id/tv_representativeRole"
        app:layout_constraintTop_toBottomOf="@id/tv_representativeRole"
        tools:text="Barack Obama" />

    <TextView
        android:id="@+id/tv_representativeParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="@id/iv_representativePicture"
        app:layout_constraintStart_toStartOf="@id/tv_representativeRole"
        app:layout_constraintTop_toBottomOf="@id/tv_representativeName"
        tools:text="Democratic Party" />

    <LinearLayout
        android:id="@+id/linearLayout_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/iv_representativePicture"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_websiteLink"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/accessibility_website_link"
            android:src="@drawable/ic_www" />

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/small_margin"
            android:contentDescription="@string/accessibility_facebook_link"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/small_margin"
            android:contentDescription="@string/accessibility_twitter_link"
            android:src="@drawable/ic_twitter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
