<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <LinearLayout
            android:id="@+id/ll_nameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkPurple"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/standard_margin"
            android:paddingBottom="@dimen/standard_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_electionNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@{voterInfoViewModel.chosenElection.name}"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subtitle"
                tools:text="Wisconsin Presidential Primary Election" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_electionDateInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/halfway_margin"
            android:fontFamily="@font/poppins"
            android:textAlignment="center"
            android:text="@{voterInfoViewModel.chosenElection.electionDay.toLocaleString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_nameHeader"
            tools:text="12 November 2025" />

        <LinearLayout
            android:id="@+id/ll_electionInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/darkBlue"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/small_margin"
            android:paddingBottom="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_electionDateInfo">

            <TextView
                android:id="@+id/tv_electionInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/election_info"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- DONE: Add click binding to open web URL -->
        <Button
            android:id="@+id/btn_votingLocations"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/round_corners_blue"
            android:fontFamily="@font/poppins"
            android:onClick="@{() -> voterInfoViewModel.openLinkOnBrowser(voterInfoViewModel.administrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            android:textColor="@color/white"
            android:visibility="@{TextUtils.isEmpty(voterInfoViewModel.administrationBody.votingLocationFinderUrl) ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_electionInfoHeader" />

        <Button
            android:id="@+id/btn_stateBallot"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/round_corners_blue"
            android:fontFamily="@font/poppins"
            android:onClick="@{() -> voterInfoViewModel.openLinkOnBrowser(voterInfoViewModel.administrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            android:textColor="@color/white"
            android:visibility="@{TextUtils.isEmpty(voterInfoViewModel.administrationBody.ballotInfoUrl) ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_votingLocations" />

        <!--        <androidx.constraintlayout.widget.Group-->
        <!--            android:id="@+id/address_group"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:constraint_referenced_ids="tv_stateCorrespondenceHeader,tv_address" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/tv_stateCorrespondenceHeader"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintStart_toStartOf="@id/tv_electionDateTitle"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_stateBallotTitle" />-->

        <!-- DONE: Add data binding -->
        <!--        <TextView-->
        <!--            android:id="@+id/tv_address"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintStart_toStartOf="@id/tv_electionDateTitle"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_stateCorrespondenceHeader" />-->

        <Button
            android:id="@+id/btn_followElection"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:onClick="@{() -> voterInfoViewModel.followUnfollowElection()}"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toTopOf="@+id/tv_notice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:fontFamily="@font/poppins_light"
            android:text="@string/follow_election_notice_message"
            android:textColor="@color/darkPurple"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
