<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="electionsViewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standard_margin"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_upcomingElections"
            style="@style/HeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/rv_upcomingElections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_noNetwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:fontFamily="@font/poppins"
            android:text="@string/connection_error"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_standard"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upcomingElections" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcomingElections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upcomingElections"
            app:listData="@{electionsViewModel.upcomingElections}"
            tools:itemCount="3"
            tools:listitem="@layout/election_item" />

        <View
            android:id="@+id/separator_upcoming"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@color/violetGray"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/tv_savedElections"
            style="@style/HeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/saved_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_upcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_savedElections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_savedElections"
            app:listData="@{electionsViewModel.savedElections}"
            tools:itemCount="2"
            tools:listitem="@layout/election_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
